IntelliJ Projects/FinalTest/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Author_Name__c</fullName>
        <label>Author Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The collection to which the product belongs.</description>
        <inlineHelpText>Friendly reminder: A product can only belong to one collection.</inlineHelpText>
        <label>Collection</label>
        <referenceTo>Collection__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fantasy</fullName>
                </value>
                <value>
                    <fullName>Horror</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Poetry</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>